# ORB_SLAM2_detailed_comments

./: .gitignore  CMakeLists.txt  CameraTrajectory2.txt  deng.txt  sfm.txt
Examples/Monocular/: custom.yaml
Examples/RGB-D/: rgbd_tum.cc
Examples/RGB-D/tum_py_tools/: associate.py  evaluate_ate.py  evaluate_rpe.py
Examples/Stereo/: custom.yaml  custom.yaml.bk  custom.yaml.mm  custom.yaml.mycamera  pose_begin.txt  start.sh  stereo_euroc.cc
include/: KeyFrame.h  LocalMapping.h  LoopClosing.h  Map.h  PointCloudMapping.h  StereoMatch.h  StereoMatchCuda.h  System.h  Tracking.h
src/: KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  PointCloudMapping.cc  StereoMatch.cc  StereoMatchCuda.cc  System.cc  Tracking.cc
